--- a/config.env
+++ b/config.env
@@ -2,4 +2,4 @@ NODE_ENV=development
 USERNAME02=thibaut
 PORT=4000
 DATABASE_PASSWORD=uo04M1nE6DhJgzyW
-DATABASE=mongodb+srv://cadioucontact:<PASSWORD>@initial-grimoire-cluste.uv5n0kw.mongodb.net/
+DATABASE=mongodb+srv://cadioucontact:<PASSWORD>@initial-grimoire-cluste.uv5n0kw.mongodb.net/Grimoire_DB
