--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:production": "SET NODE_ENV=production&&nodemon server.js"
+    "start:production": "SET NODE_ENV=production&&nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "tc",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "mongoose": "^8.4.5",
     "mongoose-unique-validator": "^5.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "path": "^0.12.7"
   }
 }
