clean de server.js et congi.env plus ajout d'une DB prod et dev

--- a/config.env
+++ b/config.env
@@ -1,7 +1,9 @@
 NODE_ENV=development
-USERNAME02=thibaut
 PORT=4000
 DATABASE_PASSWORD=uo04M1nE6DhJgzyW
 DATABASE_BOOKS=mongodb+srv://cadioucontact:<PASSWORD>@initial-grimoire-cluste.uv5n0kw.mongodb.net/Grimoire_DB
+DATABASE_BOOKS_DEV=mongodb+srv://cadioucontact:<PASSWORD>@initial-grimoire-cluste.uv5n0kw.mongodb.net/Grimoire_DB_Dev
+DATABASE_BOOKS_PRODUCTION=mongodb+srv://cadioucontact:<PASSWORD>@initial-grimoire-cluste.uv5n0kw.mongodb.net/Grimoire_DB_Production
+
 
 
